# govee-lights-claude-skill

./: .env.example  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-22-claude-state-lights.md
docs/superpowers/specs/: 2026-04-22-claude-state-lights-design.md
hooks/: govee-hook
src/govee_lights/: cli.py  client.py  config.py  state.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_state.py
