[project]
name = "govee-lights"
version = "0.1.0"
description = "Claude Code state indicator via Govee office lights"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
govee-lights = "govee_lights.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/govee_lights"]

[tool.pytest.ini_options]
testpaths = ["tests"]
